k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: server-deployment
spec: 
  replicas: 3 
  selector:
    matchLabels:
    # component inside the application is the server 
      component: server 
  template:
    metadata:
      labels: 
        component: server
    spec:
      # spec - customise the exact behaviour of the containers being created
      containers:
        - name: server
          image: stephengrider/multi-server
          ports:
            - containerPort: 5000
