k8s/server-cluster-ip-service.yaml
# Govern or manage access to our API 
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector: 
  # ammended component had a capital 'S' on server
    component: server
  ports:
    - port: 5000
      targetPort: 5000
